# game-demo

./: .gitignore  CMakeLists.txt  Makefile  README.md  parse.cpp  parse.py
LevelEditor/: Scrolled_tk_SDL_Demo.py  editor.py  editordemo.py  fltkdemo.py
levels/: level.json
misc/: valgrind.supp
scripts/: todos.sh
sprites/: box.json  dirt.json  grass.json  player.json  sand.json  target.json  tree.json  wall.json  water.json  woodplanks.json
src/: Box.cpp  Box.h  Direction.h  DynamicObject.cpp  DynamicObject.h  FileReader.cpp  FileReader.h  Free.cpp  Free.h  Game.cpp  Game.h  GameCharacter.cpp  GameCharacter.h  GameObject.cpp  GameObject.h  GameStatus.h  Grass.cpp  Grass.h  JsonLexer.cpp  JsonLexer.h  JsonParser.cpp  JsonParser.h  Level.cpp  Level.h  Main.cpp  Main.h  Player.cpp  Player.h  Point.cpp  Point.h  RenderType.h  Sand.cpp  Sand.h  SpriteHandler.cpp  SpriteHandler.h  SpriteSheet.cpp  SpriteSheet.h  SpriteState.cpp  SpriteState.h  StaticObject.cpp  (+15 more)
